--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
+
 @font-face{
-    src: url(/assets/fonts/pt-mono.ttf);
+    src: url(fonts/pt-mono.ttf);
     font-family: pt-mono-ttf;
 }
 
@@ -20,12 +21,6 @@
         color: rgb(255, 140, 0);
     }
 
-}
-
-*,
-*::before,
-*::after {
-    font-family: pt-mono-ttf;
 }
 
 .center {
@@ -49,6 +44,7 @@ header, main, div{
 }
 
 article{
+    font-family: 'pt-mono-ttf';
     font-size: 1rem;
     text-wrap: pretty wrap;
     width: 70ch;
@@ -57,15 +53,11 @@ article{
 
 footer{
     text-align: center;
-    font-size: 0.85rem;
+    font-size: -1rem;
 }
 
 .menubarsoicals ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
-}
-
-article img {
-    width: 100%;
 }
