Adding a copyright thing at the bottem,
This is mostly just to look more "Professional"

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,4 +4,5 @@
             href="https://github.com/HegweardTsulalgi/Hegweard-Tsulalgis-Blog">Source Code</a> is licensed under <a target="_blank"
             href="https://github.com/HegweardTsulalgi/Hegweard-Tsulalgis-Blog/blob/main/LICENSE">GPL-v3</a>
     </p>
+    <p>©2026-Hegweard-Tsulalgi</p>
 </footer>
