--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,5 +4,5 @@
             href="https://github.com/HegweardTsulalgi/Hegweard-Tsulalgis-Blog">Source Code</a> is licensed under <a target="_blank"
             href="https://github.com/HegweardTsulalgi/Hegweard-Tsulalgis-Blog/blob/main/LICENSE">GPL-v3</a>
     </p>
-    <p>©2026-Hegweard-Tsulalgi</p>
+    <p>©2026 Hegweard Tsulalgi</p>
 </footer>
